🐛 fix: correção de overflow no mobile

--- a/scss/_characters.scss
+++ b/scss/_characters.scss
@@ -82,5 +82,13 @@
         padding: 0 2rem;
       }
     }
+
+    .carroussel {
+      padding: 0 2rem;
+
+      .swiper {
+        overflow: hidden;
+      }
+    }
   }
 }
